test/Fail/Issue4534.err
Issue4534.agda:7,12-19: error: [GenericError]
Cannot quote a variable X
when checking that the expression quote X has type Name
